# Quinc-E-builtin-plugins

./: README.md  pyproject.toml
builtin_plugins/: __init__.py
builtin_plugins/flow_control/: __init__.py
builtin_plugins/flow_control/items/: __init__.py
builtin_plugins/flow_control/items/hold/: hold_item.py  hold_widget.py
fabrial_core_plugins/flow_control/items/hold/: hold_item.py  hold_widget.py
fabrial_core_plugins/flow_control/items/loop/: loop_item.py  loop_step.py
fabrial_core_plugins/flow_control/items/simultaneous/: simultaneous_item.py  simultaneous_step.py
quincE_core_plugins/: __init__.py
quincE_core_plugins/flow_control/: __init__.py
quincE_core_plugins/flow_control/items/: __init__.py
quincE_core_plugins/flow_control/items/hold/: hold_item.py  hold_step.py  hold_widget.py
quincE_core_plugins/flow_control/items/loop/: loop_item.py  loop_step.py  loop_widget.py
quincE_core_plugins/flow_control/items/simultaneous/: simultaneous_item.py  simultaneous_step.py  simultaneous_widget.py
